--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,15 +8,15 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "./icons/favicon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "./icons/favicon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
-    }
+    }	    
   ],
   "start_url": ".",
   "display": "standalone",
