--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,15 +18,15 @@ jobs:
     - name: Install Packages
       run: npm install
     - name: Lead Pics Optimize
-      uses: xprilion/img-resizer@0.1
+      uses: xprilion/img-resizer@0.2
       with:
-        image-folder: "public/leads"
-        new-resolution: "300x"
+        target: "public/leads"
+        dimensions: "300x"
     - name: Chapter Pics Optimize
-      uses: xprilion/img-resizer@0.1
+      uses: xprilion/img-resizer@0.2
       with:
-        image-folder: "public/chapters"
-        new-resolution: "500x"
+        target: "public/chapters"
+        dimensions: "500x"
     - name: Build
       run: REACT_APP_CACHE_BUST=${{ github.sha }} npm run build
     - name: Deploy
